--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.4.0",
+    "path-to-regexp": "^3.0.0",
     "tcomb": "^3.2.29",
     "uuid": "^3.3.2"
   }
