--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   },
   "homepage": "https://github.com/stfanmichel/ESIR-TP5#readme",
   "devDependencies": {
+    "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "commander": "^2.20.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0"
   },
   "dependencies": {
-    "bcrypt": "^3.0.5",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "jsonwebtoken": "^8.4.0",
